    * Python flags on a Requires dep now use exactly the flags on the 
      corresponding Provides, rather than being trimmed to match flags on
      python:runtime's Requires deps. (CNY-3030)
    * Disallow characters '"\\()[] in labels

  o New Features:
    * Added getLabelsForHost call, and bumped server protocol to 66. (CNY-2771)
    * Repositories now check the database to see which files already exist
      instead of looking in the filesystem for a noticeable speedup in commit
      time for systems with NFS based data stores.
    * In a GroupRecipe, r.remove now takes a use flag to determine if a trove
      should be removed. This matches the behavior of r.add*. (CNY-3115)
    * Added types to allow creation of sockets and named pipes via
      conaryclient/newtrove.py code paths
    * The "migrate" command now accepts the "--from-file" option (CNY-3114)
    * Standalone and apache servers now pull in REST api from the crest
      project if the code is available. Note that restlib and xobj are
      required for the crest implementation, and that the "baseUri" must
      be specified in the server config file (it's normally /conary).
    * Repository commits now take advantage of knowing which parts of the
      commit have not changed since the old version for better performance

Changes in 2.0.39:
  o Bug Fixes:
    * Fixed potential segfault in sqlite bindings when running under
      python 2.6. (CNY-3103)
    * Promoting a binary foo from a to b, and then promoting a group containing
      foo from b to a will no longer cause foo to be unnecessarily repromoted.
      (CNY-3088)
    * Fixed an interaction with loadRecipe overrides used by rmake and
      autoloadRecipes that would cause rmake to not find any matches
      for autoloadRecipes that were included in biarch flavored superclasses.
      (CNY-3090)
    * Redirect components should not have build requires set (CNY-3069)