@@ -13,6 +13,7 @@ Changes in @NEW@:
 
   o New Features:
     * Added getLabelsForHost call, and bumped server protocol to 66. (CNY-2771)
+    * Added getFilesFromTrove call, and bumped server protocol to 67. (CNY-3100)
     * Repositories now check the database to see which files already exist
       instead of looking in the filesystem for a noticeable speedup in commit
       time for systems with NFS based data stores.
